tests/errors/preprocessor/not_working/stalpe.c
#define func(a b) a + b

void main()
{

}
